# backend

./: .gitignore  docker-compose.yaml  pyproject.toml  requirements.txt
apps/listings/: __init__.py  models.py  pagination.py  serializers.py  urls.py  views.py
apps/listings/migrations/: 0001_initial.py  0002_alter_characteristic_type.py  0002_alter_product_lang.py  0002_remove_variant_images_imagemodel.py  0003_alter_category_name_alter_category_slug.py  0003_listing_is_active.py  0003_variant_additional_price.py  0004_alter_category_language_alter_product_lang.py  0004_image_category_image_product_is_available_and_more.py  0004_rename_name_variant_attr_name.py  0005_alter_image_image.py  0006_alter_listing_categories_and_more.py
apps/listings/tests/: __init__.py  category.py  coupons.py  filtering.py  listing_update.py  listings.py  utils.py
apps/orders/: models.py  serializers.py  views.py
apps/orders/migrations/: 0001_initial.py  0002_initial.py
apps/orders/tests/: basket.py
apps/users/: admin.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py  0001_initial_squashed.py  0001_squashed_0004_client_id_alter_client_email_and_more.py  0002_alter_magiclink_expires_at.py  0003_alter_magiclink_expires_at.py  0003_remove_client_is_superuser_client_is_staff_and_more.py  0004_client_id_alter_client_email_and_more.py  0005_alter_client_id_alter_magiclink_expires_at.py  0005_alter_magiclink_expires_at.py  0006_alter_magiclink_expires_at.py  0007_alter_magiclink_expires_at.py  0008_alter_magiclink_expires_at.py  0009_alter_magiclink_expires_at.py  0010_alter_magiclink_expires_at.py
apps/users/tests/: __init__.py
backend/: Dockerfile  gunicorn_conf.py  pyproject.toml  requirements.txt
backend/apps/listings/: models.py  pagination.py  serializers.py  urls.py  views.py
backend/settings/: settings.py  urls.py  wsgi.py
backend/tests/: __init__.py
backend/tools/: nuke_db.sh  setup_db.sh
nginx/: nginx.conf
settings/: asgi.py  settings.py  urls.py
tests/: __init__.py
(+46 files in other folders)
